--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "example: An Ionic project",
   "dependencies": {
     "gulp": "^3.5.6",
+    "gulp-util": "^3.0.5",
     "gulp-sass": "^1.3.3",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
@@ -21,5 +22,11 @@
     "cordova-plugin-splashscreen",
     "com.ionic.keyboard"
   ],
-  "cordovaPlatforms": []
+  "cordovaPlatforms": [
+    {
+      "platform": "android",
+      "locator": "browser"
+    },
+    "android"
+  ]
 }
